[package]
name = "rust_clip"
version = "0.1.0"
authors = ["antony"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
native-tls = "0.2.7"
imap = "2.4.1"
stopwatch = "0.0.7"
chrono = "0.4"